bk_ida/gccida/c0/force_to_mode
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_to_mode/src/combine.c:7104:28: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  force_to_mode( rtx x, machine_mode mode, unsigned __int64 mask, rtx reg, int just_select) 
                           ^
                           enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_to_mode/src/combine.c:7128:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v28; // [rsp+Ch] [rbp-194h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_to_mode/src/combine.c:7129:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v29; // [rsp+18h] [rbp-188h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_to_mode/src/combine.c:7131:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v31; // [rsp+3Ch] [rbp-164h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_to_mode/src/combine.c:7132:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v32; // [rsp+40h] [rbp-160h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_to_mode/src/combine.c:7137:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v37; // [rsp+88h] [rbp-118h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_to_mode/src/combine.c:7145:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v45; // [rsp+DCh] [rbp-C4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_to_mode/src/combine.c:7147:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v47; // [rsp+FCh] [rbp-A4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_to_mode/src/combine.c:7158:4: error: expected ';' after expression
rtx temp; // [rsp+140h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_to_mode/src/combine.c:7158:5: error: use of undeclared identifier 'temp'; did you mean 'tempa'?
rtx temp; // [rsp+140h] [rbp-60h] 
    ^~~~
    tempa
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_to_mode/src/combine.c:7157:18: note: 'tempa' declared here
 struct rtx_def *tempa; // [rsp+140h] [rbp-60h] 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_to_mode/src/combine.c:7167:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode op_mode; // [rsp+168h] [rbp-38h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_to_mode/src/combine.c:7169:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+170h] [rbp-30h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_to_mode/src/combine.c:7172:4: error: expected ';' after expression
rtx xa; // [rsp+190h] [rbp-10h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_to_mode/src/combine.c:7172:5: error: use of undeclared identifier 'xa'
rtx xa; // [rsp+190h] [rbp-10h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_to_mode/src/combine.c:7178:1: error: use of undeclared identifier 'xa'
xa = x; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_to_mode/src/combine.c:7194:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] == mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x)] && have_insn_for( code, mode) ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_to_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_to_mode/src/combine.c:7194:28: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] == mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x)] && have_insn_for( code, mode) ) 
                           ^~~~~~~~~~~~
                           mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_to_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_to_mode/src/combine.c:7232:39: error: use of undeclared identifier 'xa'
return gen_lowpart_for_combine( mode, xa); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_to_mode/src/combine.c:7241:1: error: use of undeclared identifier 'xa'
xa = reg; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/force_to_mode/src/obj/combine.o] Error 1
